--- a/src/0-system/0-introduction.stories.mdx
+++ b/src/0-system/0-introduction.stories.mdx
@@ -17,138 +17,142 @@ import LinkTo from "@storybook/addon-links/react";
 
 <div className="act-docs-container">
 	<Masthead />
-	<div className="act-flex act-flex-light-purple">
-		<div className="act-flex__container act-flex__container-padding-trim">
-			<div className="act-flex__grid">
-				<div className="act-flex__row">
-					<div className="act-col__cw-12">
-						<div className="act-box">
-							<div className="act-breadcrumbs">
-								<ul className="act-breadcrumbs__container">
-									<li className="act-breadcrumbs__crumb act-h6">
-										<LinkTo className="act-breadcrumbs__crumb__link" kind="system-introduction--page">
-											Design System <i className="fa-solid fa-angle-right"></i>
-										</LinkTo>
-									</li>
-									<li className="act-breadcrumbs__crumb act-h6">
-										<LinkTo className="act-breadcrumbs__crumb__link" kind="system-introduction--page">
-											Introduction <i className="fa-solid fa-angle-right"></i>
-										</LinkTo>
-									</li>
-								</ul>
-							</div>
-							<h1>ACT Government Website Design System</h1>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div className="act-flex">
-		<div className="act-flex__container">
-			<div className="act-flex__grid">
-				<div className="act-flex__row">
-					<div className="act-col__cw-12">
-						<div className="act-box">
-							<div className="act-card-grid">
-								<LinkTo className="act-card act-card__homepage act-card__feature--none" kind="system-introduction--page">
-									<div class="act-card__container">
-										<div class="act-card__content">
-											<div class="act-card__icon">
-												<i class="fa-solid fa-layer-group"></i>
-											</div>
-											<div class="act-card__title">Design System</div>
-											<div class="act-card__cta">
-												<i class="fa-solid fa-arrow-right"></i>
-											</div>
-										</div>
-									</div>
-								</LinkTo>
-								<LinkTo className="act-card act-card__homepage act-card__feature--none" kind="guidelines-overview--page">
-									<div class="act-card__container">
-										<div class="act-card__content">
-											<div class="act-card__icon">
-												<i class="fa-solid fa-scale-balanced"></i>
-											</div>
-											<div class="act-card__title">Guidelines</div>
-											<div class="act-card__cta">
-												<i class="fa-solid fa-arrow-right"></i>
-											</div>
-										</div>
-									</div>
-								</LinkTo>
-								<LinkTo className="act-card act-card__homepage act-card__feature--none" kind="design-tokens-overview--page">
-									<div class="act-card__container">
-										<div class="act-card__content">
-											<div class="act-card__icon">
-												<i class="fa-solid fa-ticket"></i>
-											</div>
-											<div class="act-card__title">Design Tokens</div>
-											<div class="act-card__cta">
-												<i class="fa-solid fa-arrow-right"></i>
-											</div>
-										</div>
-									</div>
-								</LinkTo>
-								<LinkTo className="act-card act-card__homepage act-card__feature--none" kind="layout-overview--page">
-									<div class="act-card__container">
-										<div class="act-card__content">
-											<div class="act-card__icon">
-												<i class="fa-solid fa-table-columns"></i>
-											</div>
-											<div class="act-card__title">Layout</div>
-											<div class="act-card__cta">
-												<i class="fa-solid fa-arrow-right"></i>
-											</div>
-										</div>
-									</div>
-								</LinkTo>
-								<LinkTo className="act-card act-card__homepage act-card__feature--none" kind="components-overview--page">
-									<div class="act-card__container">
-										<div class="act-card__content">
-											<div class="act-card__icon">
-												<i class="fa-solid fa-play"></i>
-											</div>
-											<div class="act-card__title">Components</div>
-											<div class="act-card__cta">
-												<i class="fa-solid fa-arrow-right"></i>
-											</div>
-										</div>
-									</div>
-								</LinkTo>
-								<LinkTo className="act-card act-card__homepage act-card__feature--none" kind="patterns-overview--page">
-									<div class="act-card__container">
-										<div class="act-card__content">
-											<div class="act-card__icon">
-												<i class="fa-solid fa-shapes"></i>
-											</div>
-											<div class="act-card__title">Patterns</div>
-											<div class="act-card__cta">
-												<i class="fa-solid fa-arrow-right"></i>
-											</div>
-										</div>
-									</div>
-								</LinkTo>
-								<LinkTo className="act-card act-card__homepage act-card__feature--none" kind="previews-overview--page">
-									<div class="act-card__container">
-										<div class="act-card__content">
-											<div class="act-card__icon">
-												<i class="fa-solid fa-eye"></i>
-											</div>
-											<div class="act-card__title">Previews</div>
-											<div class="act-card__cta">
-												<i class="fa-solid fa-arrow-right"></i>
-											</div>
-										</div>
-									</div>
-								</LinkTo>
+	<main className="act-body">
+		<div className="act-flex act-flex-light-purple">
+			<div className="act-flex__container act-flex__container-padding-trim">
+				<div className="act-flex__grid">
+					<div className="act-flex__row">
+						<div className="act-col__cw-12">
+							<div className="act-box">
+								<div className="act-breadcrumbs">
+									<ul className="act-breadcrumbs__container">
+										<li className="act-breadcrumbs__crumb act-h6">
+											<LinkTo className="act-breadcrumbs__crumb__link" kind="system-introduction--page">
+												Design System <i className="fa-solid fa-angle-right"></i>
+											</LinkTo>
+										</li>
+										<li className="act-breadcrumbs__crumb act-h6">
+											<LinkTo className="act-breadcrumbs__crumb__link" kind="system-introduction--page">
+												Introduction <i className="fa-solid fa-angle-right"></i>
+											</LinkTo>
+										</li>
+									</ul>
+								</div>
+								<h1>ACT Government Website Design System</h1>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>
-	<AoC />
-	<Footer />
+		<div className="act-flex">
+			<div className="act-flex__container">
+				<div className="act-flex__grid">
+					<div className="act-flex__row">
+						<div className="act-col__cw-12">
+							<div className="act-box">
+								<div className="act-card-grid">
+									<LinkTo className="act-card act-card__homepage act-card__feature--none" kind="system-introduction--page">
+										<div class="act-card__container">
+											<div class="act-card__content">
+												<div class="act-card__icon">
+													<i class="fa-solid fa-layer-group"></i>
+												</div>
+												<div class="act-card__title">Design System</div>
+												<div class="act-card__cta">
+													<i class="fa-solid fa-arrow-right"></i>
+												</div>
+											</div>
+										</div>
+									</LinkTo>
+									<LinkTo className="act-card act-card__homepage act-card__feature--none" kind="guidelines-overview--page">
+										<div class="act-card__container">
+											<div class="act-card__content">
+												<div class="act-card__icon">
+													<i class="fa-solid fa-scale-balanced"></i>
+												</div>
+												<div class="act-card__title">Guidelines</div>
+												<div class="act-card__cta">
+													<i class="fa-solid fa-arrow-right"></i>
+												</div>
+											</div>
+										</div>
+									</LinkTo>
+									<LinkTo className="act-card act-card__homepage act-card__feature--none" kind="design-tokens-overview--page">
+										<div class="act-card__container">
+											<div class="act-card__content">
+												<div class="act-card__icon">
+													<i class="fa-solid fa-ticket"></i>
+												</div>
+												<div class="act-card__title">Design Tokens</div>
+												<div class="act-card__cta">
+													<i class="fa-solid fa-arrow-right"></i>
+												</div>
+											</div>
+										</div>
+									</LinkTo>
+									<LinkTo className="act-card act-card__homepage act-card__feature--none" kind="layout-overview--page">
+										<div class="act-card__container">
+											<div class="act-card__content">
+												<div class="act-card__icon">
+													<i class="fa-solid fa-table-columns"></i>
+												</div>
+												<div class="act-card__title">Layout</div>
+												<div class="act-card__cta">
+													<i class="fa-solid fa-arrow-right"></i>
+												</div>
+											</div>
+										</div>
+									</LinkTo>
+									<LinkTo className="act-card act-card__homepage act-card__feature--none" kind="components-overview--page">
+										<div class="act-card__container">
+											<div class="act-card__content">
+												<div class="act-card__icon">
+													<i class="fa-solid fa-play"></i>
+												</div>
+												<div class="act-card__title">Components</div>
+												<div class="act-card__cta">
+													<i class="fa-solid fa-arrow-right"></i>
+												</div>
+											</div>
+										</div>
+									</LinkTo>
+									<LinkTo className="act-card act-card__homepage act-card__feature--none" kind="patterns-overview--page">
+										<div class="act-card__container">
+											<div class="act-card__content">
+												<div class="act-card__icon">
+													<i class="fa-solid fa-shapes"></i>
+												</div>
+												<div class="act-card__title">Patterns</div>
+												<div class="act-card__cta">
+													<i class="fa-solid fa-arrow-right"></i>
+												</div>
+											</div>
+										</div>
+									</LinkTo>
+									<LinkTo className="act-card act-card__homepage act-card__feature--none" kind="previews-overview--page">
+										<div class="act-card__container">
+											<div class="act-card__content">
+												<div class="act-card__icon">
+													<i class="fa-solid fa-eye"></i>
+												</div>
+												<div class="act-card__title">Previews</div>
+												<div class="act-card__cta">
+													<i class="fa-solid fa-arrow-right"></i>
+												</div>
+											</div>
+										</div>
+									</LinkTo>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</main>
+	<footer className="act-footer">
+		<AoC />
+		<Footer />
+	</footer>
 </div>
