--- a/src/0-system/changelog.stories.mdx
+++ b/src/0-system/changelog.stories.mdx
@@ -17,103 +17,107 @@ import LinkTo from "@storybook/addon-links/react";
 
 <div className="act-docs-container">
 	<Masthead />
-	<div className="act-flex act-flex-light-purple">
-		<div className="act-flex__container act-flex__container-padding-trim">
-			<div className="act-flex__grid">
-				<div className="act-flex__row">
-					<div className="act-col__cw-12">
-						<div className="act-box">
-							<div className="act-breadcrumbs">
-								<ul className="act-breadcrumbs__container">
-									<li className="act-breadcrumbs__crumb act-h6">
-										<LinkTo className="act-breadcrumbs__crumb__link" kind="system-introduction--page">
-											Design System <i className="fa-solid fa-angle-right"></i>
-										</LinkTo>
-									</li>
-									<li className="act-breadcrumbs__crumb act-h6">
-										<LinkTo className="act-breadcrumbs__crumb__link" kind="system-changes-updates--page">
-											Changes & updates <i className="fa-solid fa-angle-right"></i>
-										</LinkTo>
-									</li>
-								</ul>
-							</div>
-							<h1>Changes & updates</h1>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div className="act-flex">
-		<div className="act-flex__container">
-			<div className="act-flex__grid">
-				<div className="act-flex__row">
-					<div className="act-col__cw-12">
-						<div className="act-box">
-							<div className="act-table-container">
-								<table className="act-table">
-									<thead>
-										<tr>
-											<th>Item</th>
-											<th>Value</th>
-										</tr>
-									</thead>
-									<tbody>
-										<tr>
-											<td>Version</td>
-											<td>
-												<img src="https://img.shields.io/github/package-json/v/pollen-digital/pollen-mirage?filename=mirage%2Fpackage.json&style=flat-square" />
-											</td>
-										</tr>
-										<tr>
-											<td>Commit activity</td>
-											<td>
-												<img src="https://img.shields.io/github/commit-activity/w/ACTGov-Design-System/ACTGov-Design-System?style=flat-square" />
-												<br />
-												<img src="https://img.shields.io/github/commit-activity/m/ACTGov-Design-System/ACTGov-Design-System?style=flat-square" />
-												<br />
-												<img src="https://img.shields.io/github/commit-activity/y/ACTGov-Design-System/ACTGov-Design-System?style=flat-square" />
-											</td>
-										</tr>
-										<tr>
-											<td>Last commit</td>
-											<td>
-												<img src="https://img.shields.io/github/last-commit/ACTGov-Design-System/ACTGov-Design-System?style=flat-square" />
-											</td>
-										</tr>
-										<tr>
-											<td>Contributors</td>
-											<td>
-												<img src="https://img.shields.io/github/contributors/ACTGov-Design-System/ACTGov-Design-System?style=flat-square" />
-											</td>
-										</tr>
-										<tr>
-											<td>Repo size</td>
-											<td>
-												<img src="https://img.shields.io/github/repo-size/ACTGov-Design-System/ACTGov-Design-System?style=flat-square" />
-											</td>
-										</tr>
-										<tr>
-											<td>Code size</td>
-											<td>
-												<img src="https://img.shields.io/github/languages/code-size/ACTGov-Design-System/ACTGov-Design-System?style=flat-square" />
-											</td>
-										</tr>
-										<tr>
-											<td>File count</td>
-											<td>
-												<img src="https://img.shields.io/github/directory-file-count/ACTGov-Design-System/ACTGov-Design-System?style=flat-square" />
-											</td>
-										</tr>
-									</tbody>
-								</table>
+	<main className="act-body">
+		<div className="act-flex act-flex-light-purple">
+			<div className="act-flex__container act-flex__container-padding-trim">
+				<div className="act-flex__grid">
+					<div className="act-flex__row">
+						<div className="act-col__cw-12">
+							<div className="act-box">
+								<div className="act-breadcrumbs">
+									<ul className="act-breadcrumbs__container">
+										<li className="act-breadcrumbs__crumb act-h6">
+											<LinkTo className="act-breadcrumbs__crumb__link" kind="system-introduction--page">
+												Design System <i className="fa-solid fa-angle-right"></i>
+											</LinkTo>
+										</li>
+										<li className="act-breadcrumbs__crumb act-h6">
+											<LinkTo className="act-breadcrumbs__crumb__link" kind="system-changes-updates--page">
+												Changes & updates <i className="fa-solid fa-angle-right"></i>
+											</LinkTo>
+										</li>
+									</ul>
+								</div>
+								<h1>Changes & updates</h1>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>
-	<AoC />
-	<Footer />
+		<div className="act-flex">
+			<div className="act-flex__container">
+				<div className="act-flex__grid">
+					<div className="act-flex__row">
+						<div className="act-col__cw-12">
+							<div className="act-box">
+								<div className="act-table-container">
+									<table className="act-table">
+										<thead>
+											<tr>
+												<th>Item</th>
+												<th>Value</th>
+											</tr>
+										</thead>
+										<tbody>
+											<tr>
+												<td>Version</td>
+												<td>
+													<img src="https://img.shields.io/github/package-json/v/pollen-digital/pollen-mirage?filename=mirage%2Fpackage.json&style=flat-square" />
+												</td>
+											</tr>
+											<tr>
+												<td>Commit activity</td>
+												<td>
+													<img src="https://img.shields.io/github/commit-activity/w/ACTGov-Design-System/ACTGov-Design-System?style=flat-square" />
+													<br />
+													<img src="https://img.shields.io/github/commit-activity/m/ACTGov-Design-System/ACTGov-Design-System?style=flat-square" />
+													<br />
+													<img src="https://img.shields.io/github/commit-activity/y/ACTGov-Design-System/ACTGov-Design-System?style=flat-square" />
+												</td>
+											</tr>
+											<tr>
+												<td>Last commit</td>
+												<td>
+													<img src="https://img.shields.io/github/last-commit/ACTGov-Design-System/ACTGov-Design-System?style=flat-square" />
+												</td>
+											</tr>
+											<tr>
+												<td>Contributors</td>
+												<td>
+													<img src="https://img.shields.io/github/contributors/ACTGov-Design-System/ACTGov-Design-System?style=flat-square" />
+												</td>
+											</tr>
+											<tr>
+												<td>Repo size</td>
+												<td>
+													<img src="https://img.shields.io/github/repo-size/ACTGov-Design-System/ACTGov-Design-System?style=flat-square" />
+												</td>
+											</tr>
+											<tr>
+												<td>Code size</td>
+												<td>
+													<img src="https://img.shields.io/github/languages/code-size/ACTGov-Design-System/ACTGov-Design-System?style=flat-square" />
+												</td>
+											</tr>
+											<tr>
+												<td>File count</td>
+												<td>
+													<img src="https://img.shields.io/github/directory-file-count/ACTGov-Design-System/ACTGov-Design-System?style=flat-square" />
+												</td>
+											</tr>
+										</tbody>
+									</table>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</main>
+	<footer className="act-footer">
+		<AoC />
+		<Footer />
+	</footer>
 </div>
