--- a/src/0-system/ecosystem.stories.mdx
+++ b/src/0-system/ecosystem.stories.mdx
@@ -17,79 +17,83 @@ import LinkTo from "@storybook/addon-links/react";
 
 <div className="act-docs-container">
 	<Masthead />
-	<div className="act-flex act-flex-light-purple">
-		<div className="act-flex__container act-flex__container-padding-trim">
-			<div className="act-flex__grid">
-				<div className="act-flex__row">
-					<div className="act-col__cw-12">
-						<div className="act-box">
-							<div className="act-breadcrumbs">
-								<ul className="act-breadcrumbs__container">
-									<li className="act-breadcrumbs__crumb act-h6">
-										<LinkTo className="act-breadcrumbs__crumb__link" kind="system-introduction--page">
-											Design System <i className="fa-solid fa-angle-right"></i>
-										</LinkTo>
-									</li>
-									<li className="act-breadcrumbs__crumb act-h6">
-										<LinkTo className="act-breadcrumbs__crumb__link" kind="system-our-ecosystem--page">
-											Our ecosystem <i className="fa-solid fa-angle-right"></i>
-										</LinkTo>
-									</li>
-								</ul>
+	<main className="act-body">
+		<div className="act-flex act-flex-light-purple">
+			<div className="act-flex__container act-flex__container-padding-trim">
+				<div className="act-flex__grid">
+					<div className="act-flex__row">
+						<div className="act-col__cw-12">
+							<div className="act-box">
+								<div className="act-breadcrumbs">
+									<ul className="act-breadcrumbs__container">
+										<li className="act-breadcrumbs__crumb act-h6">
+											<LinkTo className="act-breadcrumbs__crumb__link" kind="system-introduction--page">
+												Design System <i className="fa-solid fa-angle-right"></i>
+											</LinkTo>
+										</li>
+										<li className="act-breadcrumbs__crumb act-h6">
+											<LinkTo className="act-breadcrumbs__crumb__link" kind="system-our-ecosystem--page">
+												Our ecosystem <i className="fa-solid fa-angle-right"></i>
+											</LinkTo>
+										</li>
+									</ul>
+								</div>
+								<h1>Our ecosystem</h1>
 							</div>
-							<h1>Our ecosystem</h1>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>
-	<div className="act-flex">
-		<div className="act-flex__container">
-			<div className="act-flex__grid">
-				<div className="act-flex__row">
-					<div className="act-col__cw-12">
-						<div className="act-box">
-							<div className="act-img">
-								<img src="/images/0-system-stack-1.png" alt="Illustration of the current project stack" />
-								<div className="act-img__description act-p-small">
-									<i class="fa-solid fa-circle-info"></i> Illustration of the current project stack
+		<div className="act-flex">
+			<div className="act-flex__container">
+				<div className="act-flex__grid">
+					<div className="act-flex__row">
+						<div className="act-col__cw-12">
+							<div className="act-box">
+								<div className="act-img">
+									<img src="/images/0-system-stack-1.png" alt="Illustration of the current project stack" />
+									<div className="act-img__description act-p-small">
+										<i class="fa-solid fa-circle-info"></i> Illustration of the current project stack
+									</div>
 								</div>
 							</div>
 						</div>
 					</div>
-				</div>
-				<div className="act-flex__row">
-					<div className="act-col__cw-12">
-						<div className="act-box">
-							<h2>Notion</h2>
+					<div className="act-flex__row">
+						<div className="act-col__cw-12">
+							<div className="act-box">
+								<h2>Notion</h2>
+							</div>
 						</div>
 					</div>
-				</div>
-				<div className="act-flex__row">
-					<div className="act-col__cw-12">
-						<div className="act-box">
-							<h2>Figma</h2>
+					<div className="act-flex__row">
+						<div className="act-col__cw-12">
+							<div className="act-box">
+								<h2>Figma</h2>
+							</div>
 						</div>
 					</div>
-				</div>
-				<div className="act-flex__row">
-					<div className="act-col__cw-12">
-						<div className="act-box">
-							<h2>Storybook.js</h2>
+					<div className="act-flex__row">
+						<div className="act-col__cw-12">
+							<div className="act-box">
+								<h2>Storybook.js</h2>
+							</div>
 						</div>
 					</div>
-				</div>
-				<div className="act-flex__row">
-					<div className="act-col__cw-12">
-						<div className="act-box">
-							<h2>GitHub</h2>
+					<div className="act-flex__row">
+						<div className="act-col__cw-12">
+							<div className="act-box">
+								<h2>GitHub</h2>
+							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>
-	<AoC />
-	<Footer />
+	</main>
+	<footer className="act-footer">
+		<AoC />
+		<Footer />
+	</footer>
 </div>
