--- a/src/0-system/roles.stories.mdx
+++ b/src/0-system/roles.stories.mdx
@@ -17,145 +17,149 @@ import LinkTo from "@storybook/addon-links/react";
 
 <div className="act-docs-container">
 	<Masthead />
-	<div className="act-flex act-flex-light-purple">
-		<div className="act-flex__container act-flex__container-padding-trim">
-			<div className="act-flex__grid">
-				<div className="act-flex__row">
-					<div className="act-col__cw-12">
-						<div className="act-box">
-							<div className="act-breadcrumbs">
-								<ul className="act-breadcrumbs__container">
-									<li className="act-breadcrumbs__crumb act-h6">
-										<LinkTo className="act-breadcrumbs__crumb__link" kind="system-introduction--page">
-											Design System <i className="fa-solid fa-angle-right"></i>
-										</LinkTo>
-									</li>
-									<li className="act-breadcrumbs__crumb act-h6">
-										<LinkTo className="act-breadcrumbs__crumb__link" kind="system-roles-responsibilities--page">
-											Roles & responsibilities <i className="fa-solid fa-angle-right"></i>
-										</LinkTo>
-									</li>
-								</ul>
-							</div>
-							<h1>Roles & responsibilities</h1>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div className="act-flex">
-		<div className="act-flex__container">
-			<div className="act-flex__grid">
-				<div className="act-flex__row">
-					<div className="act-col__cw-12">
-						<div className="act-box">
-							<h2>ACT Government</h2>
-							<div className="act-table-container">
-								<table>
-									<thead>
-										<tr>
-											<th>Name</th>
-											<th>Role</th>
-											<th>Responsibility</th>
-											<th>Email</th>
-										</tr>
-									</thead>
-									<tbody>
-										<tr>
-											<td>Jack Walsh</td>
-											<td>Senior Director, Digital Transformation</td>
-											<td>&nbsp;</td>
-											<td>jack.walsh@act.gov.au</td>
-										</tr>
-									</tbody>
-								</table>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div className="act-flex__row">
-					<div className="act-col__cw-12">
-						<div className="act-box">
-							<h2>Pollen</h2>
-							<h3>Production</h3>
-							<div className="act-table-container">
-								<table>
-									<thead>
-										<tr>
-											<th>Name</th>
-											<th>Role</th>
-											<th>Responsibility</th>
-											<th>Email</th>
-										</tr>
-									</thead>
-									<tbody>
-										<tr>
-											<td>Gabby Shaw</td>
-											<td>Senior Consultant</td>
-											<td></td>
-											<td>gabby@pollen.com.au</td>
-										</tr>
-										<tr>
-											<td>Jonathan Waterworth</td>
-											<td>Product Designer</td>
-											<td></td>
-											<td>jonathan@pollen.com.au</td>
-										</tr>
-										<tr>
-											<td>Tom Milburn</td>
-											<td>Senior Product Engineer</td>
-											<td></td>
-											<td>tom@pollen.com.au</td>
-										</tr>
-										<tr>
-											<td>Theresa Flood</td>
-											<td>Product Researcher</td>
-											<td></td>
-											<td>theresa@pollen.com.au</td>
-										</tr>
-									</tbody>
-								</table>
-							</div>
-							<h3>Oversight</h3>
-							<div className="act-table-container">
-								<table>
-									<thead>
-										<tr>
-											<th>Name</th>
-											<th>Role</th>
-											<th>Responsibility</th>
-											<th>Email</th>
-										</tr>
-									</thead>
-									<tbody>
-										<tr>
-											<td>Brett Mitchell</td>
-											<td>Managing Director</td>
-											<td></td>
-											<td>brett@pollen.com.au</td>
-										</tr>
-										<tr>
-											<td>Brett Walsh</td>
-											<td>Head of Design</td>
-											<td></td>
-											<td>brett.walsh@pollen.com.au</td>
-										</tr>
-										<tr>
-											<td>Craig Sharkie</td>
-											<td>Technical Director</td>
-											<td></td>
-											<td>craig@pollen.com.au</td>
-										</tr>
-									</tbody>
-								</table>
+	<main className="act-body">
+		<div className="act-flex act-flex-light-purple">
+			<div className="act-flex__container act-flex__container-padding-trim">
+				<div className="act-flex__grid">
+					<div className="act-flex__row">
+						<div className="act-col__cw-12">
+							<div className="act-box">
+								<div className="act-breadcrumbs">
+									<ul className="act-breadcrumbs__container">
+										<li className="act-breadcrumbs__crumb act-h6">
+											<LinkTo className="act-breadcrumbs__crumb__link" kind="system-introduction--page">
+												Design System <i className="fa-solid fa-angle-right"></i>
+											</LinkTo>
+										</li>
+										<li className="act-breadcrumbs__crumb act-h6">
+											<LinkTo className="act-breadcrumbs__crumb__link" kind="system-roles-responsibilities--page">
+												Roles & responsibilities <i className="fa-solid fa-angle-right"></i>
+											</LinkTo>
+										</li>
+									</ul>
+								</div>
+								<h1>Roles & responsibilities</h1>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>
-	<AoC />
-	<Footer />
+		<div className="act-flex">
+			<div className="act-flex__container">
+				<div className="act-flex__grid">
+					<div className="act-flex__row">
+						<div className="act-col__cw-12">
+							<div className="act-box">
+								<h2>ACT Government</h2>
+								<div className="act-table-container">
+									<table>
+										<thead>
+											<tr>
+												<th>Name</th>
+												<th>Role</th>
+												<th>Responsibility</th>
+												<th>Email</th>
+											</tr>
+										</thead>
+										<tbody>
+											<tr>
+												<td>Jack Walsh</td>
+												<td>Senior Director, Digital Transformation</td>
+												<td>&nbsp;</td>
+												<td>jack.walsh@act.gov.au</td>
+											</tr>
+										</tbody>
+									</table>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div className="act-flex__row">
+						<div className="act-col__cw-12">
+							<div className="act-box">
+								<h2>Pollen</h2>
+								<h3>Production</h3>
+								<div className="act-table-container">
+									<table>
+										<thead>
+											<tr>
+												<th>Name</th>
+												<th>Role</th>
+												<th>Responsibility</th>
+												<th>Email</th>
+											</tr>
+										</thead>
+										<tbody>
+											<tr>
+												<td>Gabby Shaw</td>
+												<td>Senior Consultant</td>
+												<td></td>
+												<td>gabby@pollen.com.au</td>
+											</tr>
+											<tr>
+												<td>Jonathan Waterworth</td>
+												<td>Product Designer</td>
+												<td></td>
+												<td>jonathan@pollen.com.au</td>
+											</tr>
+											<tr>
+												<td>Tom Milburn</td>
+												<td>Senior Product Engineer</td>
+												<td></td>
+												<td>tom@pollen.com.au</td>
+											</tr>
+											<tr>
+												<td>Theresa Flood</td>
+												<td>Product Researcher</td>
+												<td></td>
+												<td>theresa@pollen.com.au</td>
+											</tr>
+										</tbody>
+									</table>
+								</div>
+								<h3>Oversight</h3>
+								<div className="act-table-container">
+									<table>
+										<thead>
+											<tr>
+												<th>Name</th>
+												<th>Role</th>
+												<th>Responsibility</th>
+												<th>Email</th>
+											</tr>
+										</thead>
+										<tbody>
+											<tr>
+												<td>Brett Mitchell</td>
+												<td>Managing Director</td>
+												<td></td>
+												<td>brett@pollen.com.au</td>
+											</tr>
+											<tr>
+												<td>Brett Walsh</td>
+												<td>Head of Design</td>
+												<td></td>
+												<td>brett.walsh@pollen.com.au</td>
+											</tr>
+											<tr>
+												<td>Craig Sharkie</td>
+												<td>Technical Director</td>
+												<td></td>
+												<td>craig@pollen.com.au</td>
+											</tr>
+										</tbody>
+									</table>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</main>
+	<footer className="act-footer">
+		<AoC />
+		<Footer />
+	</footer>
 </div>
