--- a/src/0-system/technical-info.stories.mdx
+++ b/src/0-system/technical-info.stories.mdx
@@ -17,118 +17,122 @@ import LinkTo from "@storybook/addon-links/react";
 
 <div className="act-docs-container">
 	<Masthead />
-	<div className="act-flex act-flex-light-purple">
-		<div className="act-flex__container act-flex__container-padding-trim">
-			<div className="act-flex__grid">
-				<div className="act-flex__row">
-					<div className="act-col__cw-12">
-						<div className="act-box">
-							<div className="act-breadcrumbs">
-								<ul className="act-breadcrumbs__container">
-									<li className="act-breadcrumbs__crumb act-h6">
-										<LinkTo className="act-breadcrumbs__crumb__link" kind="system-introduction--page">
-											Design System <i className="fa-solid fa-angle-right"></i>
-										</LinkTo>
-									</li>
-									<li className="act-breadcrumbs__crumb act-h6">
-										<LinkTo className="act-breadcrumbs__crumb__link" kind="system-technical-info--page">
-											Technical Info <i className="fa-solid fa-angle-right"></i>
-										</LinkTo>
-									</li>
-								</ul>
+	<main className="act-body">
+		<div className="act-flex act-flex-light-purple">
+			<div className="act-flex__container act-flex__container-padding-trim">
+				<div className="act-flex__grid">
+					<div className="act-flex__row">
+						<div className="act-col__cw-12">
+							<div className="act-box">
+								<div className="act-breadcrumbs">
+									<ul className="act-breadcrumbs__container">
+										<li className="act-breadcrumbs__crumb act-h6">
+											<LinkTo className="act-breadcrumbs__crumb__link" kind="system-introduction--page">
+												Design System <i className="fa-solid fa-angle-right"></i>
+											</LinkTo>
+										</li>
+										<li className="act-breadcrumbs__crumb act-h6">
+											<LinkTo className="act-breadcrumbs__crumb__link" kind="system-technical-info--page">
+												Technical Info <i className="fa-solid fa-angle-right"></i>
+											</LinkTo>
+										</li>
+									</ul>
+								</div>
+								<h1>Technical Info</h1>
 							</div>
-							<h1>Technical Info</h1>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>
-	<div className="act-flex">
-		<div className="act-flex__container">
-			<div className="act-flex__grid">
-				<div className="act-flex__row">
-					<div className="act-col__cw-12">
-						<div className="act-box">
-							<h2>Repo</h2>
-							<img src="https://img.shields.io/github/package-json/v/ACTGov-Design-System/ACTGov-Design-System?style=flat-square" />
-							<p>
-								The repo for this project is hosted on GitHub and can be found{" "}
-								<a href="https://github.com/ACTGov-Design-System/ACTGov-Design-System" target="_blank" title="ACT Government GitHub">
-									here
-								</a>
-							</p>
+		<div className="act-flex">
+			<div className="act-flex__container">
+				<div className="act-flex__grid">
+					<div className="act-flex__row">
+						<div className="act-col__cw-12">
+							<div className="act-box">
+								<h2>Repo</h2>
+								<img src="https://img.shields.io/github/package-json/v/ACTGov-Design-System/ACTGov-Design-System?style=flat-square" />
+								<p>
+									The repo for this project is hosted on GitHub and can be found{" "}
+									<a href="https://github.com/ACTGov-Design-System/ACTGov-Design-System" target="_blank" title="ACT Government GitHub">
+										here
+									</a>
+								</p>
+							</div>
 						</div>
 					</div>
-				</div>
-				<div className="act-flex__row">
-					<div className="act-col__cw-12">
-						<div className="act-box">
-							<h2>Source Code</h2>
-							<p>The source code for this project is broken into three main directories:</p>
-							<ul>
-								<li>.storybook</li>
-								<li>src</li>
-								<li>storybook-static</li>
-							</ul>
-							<p>At the root of the repo there are also several configuration files for ESLint and Prettier.</p>
-							<p>
-								For more information including how to clone, modify and publish changes to the Design System please refer to the <code>README.md</code> in the root of the repo.
-							</p>
+					<div className="act-flex__row">
+						<div className="act-col__cw-12">
+							<div className="act-box">
+								<h2>Source Code</h2>
+								<p>The source code for this project is broken into three main directories:</p>
+								<ul>
+									<li>.storybook</li>
+									<li>src</li>
+									<li>storybook-static</li>
+								</ul>
+								<p>At the root of the repo there are also several configuration files for ESLint and Prettier.</p>
+								<p>
+									For more information including how to clone, modify and publish changes to the Design System please refer to the <code>README.md</code> in the root of the repo.
+								</p>
+							</div>
 						</div>
 					</div>
-				</div>
-				<div className="act-flex__row">
-					<div className="act-col__cw-12">
-						<div className="act-box">
-							<h3>.storybook</h3>
-							<p>This directory contains the configuration and settings for the Storybook.js installation.</p>
-							<h4>main.js</h4>
-							<p>
-								The main.js file contains the primary settings for Storybook.js, it configures which file extensions to use for component pages, which Storybook.js integrations
-								(addons) to run and which directory to serve public resources from.
-							</p>
-							<h4>manager.js</h4>
-							<p>The manager.js file controls the display and configuration of elements within the Storybook.js sidebar</p>
-							<h4>preview.js</h4>
-							<p>The preview.js file is responsible for the display and configuration of the Storybook.js preview window.</p>
+					<div className="act-flex__row">
+						<div className="act-col__cw-12">
+							<div className="act-box">
+								<h3>.storybook</h3>
+								<p>This directory contains the configuration and settings for the Storybook.js installation.</p>
+								<h4>main.js</h4>
+								<p>
+									The main.js file contains the primary settings for Storybook.js, it configures which file extensions to use for component pages, which Storybook.js integrations
+									(addons) to run and which directory to serve public resources from.
+								</p>
+								<h4>manager.js</h4>
+								<p>The manager.js file controls the display and configuration of elements within the Storybook.js sidebar</p>
+								<h4>preview.js</h4>
+								<p>The preview.js file is responsible for the display and configuration of the Storybook.js preview window.</p>
+							</div>
 						</div>
 					</div>
-				</div>
-				<div className="act-flex__row">
-					<div className="act-col__cw-12">
-						<div className="act-box">
-							<h3>src</h3>
-							<p>
-								This directory contains the bulk of the design system - it contains everything from documentation and design tokens, through to components, patterns and complete
-								page previews.
-							</p>
-							<h4>_core</h4>
-							<p>The _core folder contains the global SCSS of the design system</p>
-							<h4>_docs</h4>
-							<p>The _docs folder contains reusable components suitable for use in documentation pages</p>
-							<h4>0-system</h4>
-							<h4>1-guidelines</h4>
-							<h4>2-design-tokens</h4>
-							<h4>3-layout</h4>
-							<h4>4-components</h4>
-							<h4>5-patterns</h4>
-							<h4>6-previews</h4>
+					<div className="act-flex__row">
+						<div className="act-col__cw-12">
+							<div className="act-box">
+								<h3>src</h3>
+								<p>
+									This directory contains the bulk of the design system - it contains everything from documentation and design tokens, through to components, patterns and complete
+									page previews.
+								</p>
+								<h4>_core</h4>
+								<p>The _core folder contains the global SCSS of the design system</p>
+								<h4>_docs</h4>
+								<p>The _docs folder contains reusable components suitable for use in documentation pages</p>
+								<h4>0-system</h4>
+								<h4>1-guidelines</h4>
+								<h4>2-design-tokens</h4>
+								<h4>3-layout</h4>
+								<h4>4-components</h4>
+								<h4>5-patterns</h4>
+								<h4>6-previews</h4>
+							</div>
 						</div>
 					</div>
-				</div>
-				<div className="act-flex__row">
-					<div className="act-col__cw-12">
-						<div className="act-box">
-							<h3>storybook-static</h3>
-							<p>This directory is the build destination for Storybook.js. It's contents are served via GitHub Pages as the complete design system.</p>
-							<p>This directory is not version controlled - and ignored by git.</p>
+					<div className="act-flex__row">
+						<div className="act-col__cw-12">
+							<div className="act-box">
+								<h3>storybook-static</h3>
+								<p>This directory is the build destination for Storybook.js. It's contents are served via GitHub Pages as the complete design system.</p>
+								<p>This directory is not version controlled - and ignored by git.</p>
+							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>
-	<AoC />
-	<Footer />
+	</main>
+	<footer className="act-footer">
+		<AoC />
+		<Footer />
+	</footer>
 </div>
