--- a/src/4-components/0-overview.stories.mdx
+++ b/src/4-components/0-overview.stories.mdx
@@ -17,243 +17,245 @@ import LinkTo from "@storybook/addon-links/react";
 
 <div className="act-docs-container">
 	<Masthead />
-	<div className="act-flex act-flex-light-purple">
-		<div className="act-flex__container act-flex__container-padding-trim">
-			<div className="act-flex__grid">
-				<div className="act-flex__row">
-					<div className="act-col__cw-12">
-						<div className="act-box">
-							<div className="act-breadcrumbs">
-								<ul className="act-breadcrumbs__container">
-									<li className="act-breadcrumbs__crumb act-h6">
-										<LinkTo className="act-breadcrumbs__crumb__link" kind="system-introduction--page">
-											Design System <i className="fa-solid fa-angle-right"></i>
-										</LinkTo>
-									</li>
-									<li className="act-breadcrumbs__crumb act-h6">
-										<LinkTo className="act-breadcrumbs__crumb__link" kind="components-overview--page">
-											Components <i className="fa-solid fa-angle-right"></i>
-										</LinkTo>
-									</li>
-								</ul>
-							</div>
-							<h1>Components</h1>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div className="act-flex">
-		<div className="act-flex__container">
-			<div className="act-flex__grid">
-				<div className="act-flex__row">
-					<div className="act-col__cw-12">
-						<div className="act-box">
-							<div className="act-card-grid">
-								<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="components-accordion-details--page">
-									<div class="act-card__container">
-										<div class="act-card__content">
-											<div class="act-card__icon">
-												<i class="fa-solid fa-rectangle-list"></i>
-											</div>
-											<div class="act-card__title">Accordion</div>
-											<div class="act-card__description">A vertically stacked list of headers with hidden content</div>
-											<div class="act-card__cta">
-												<i class="fa-solid fa-arrow-right"></i>
-											</div>
-										</div>
-									</div>
-								</LinkTo>
-								<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="components-alerts-global-alert--default">
-									<div class="act-card__container">
-										<div class="act-card__content">
-											<div class="act-card__icon">
-												<i class="fa-solid fa-triangle-exclamation"></i>
-											</div>
-											<div class="act-card__title">Alerts</div>
-											<div class="act-card__description">Display critical or important information to the user</div>
-											<div class="act-card__cta">
-												<i class="fa-solid fa-arrow-right"></i>
-											</div>
-										</div>
-									</div>
-								</LinkTo>
-								<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="components-alerts-global-alert--default">
-									<div class="act-card__container">
-										<div class="act-card__content">
-											<div class="act-card__icon">
-												<i class="fa-solid fa-circle-dot"></i>
-											</div>
-											<div class="act-card__title">Buttons</div>
-											<div class="act-card__description">Clickable elements that are used to trigger actions</div>
-											<div class="act-card__cta">
-												<i class="fa-solid fa-arrow-right"></i>
-											</div>
-										</div>
-									</div>
-								</LinkTo>
-								<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="components-alerts-global-alert--default">
-									<div class="act-card__container">
-										<div class="act-card__content">
-											<div class="act-card__icon">
-												<i class="fa-solid fa-object-group"></i>
-											</div>
-											<div class="act-card__title">Cards</div>
-											<div class="act-card__description">Present a high-level summary of content related to a single topic for users to navigate to</div>
-											<div class="act-card__cta">
-												<i class="fa-solid fa-arrow-right"></i>
-											</div>
-										</div>
-									</div>
-								</LinkTo>
-								<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="components-alerts-global-alert--default">
-									<div class="act-card__container">
-										<div class="act-card__content">
-											<div class="act-card__icon">
-												<i class="fa-solid fa-shoe-prints"></i>
-											</div>
-											<div class="act-card__title">Footers</div>
-											<div class="act-card__description">Displays across the bottom of all ACT Government websites</div>
-											<div class="act-card__cta">
-												<i class="fa-solid fa-arrow-right"></i>
-											</div>
-										</div>
-									</div>
-								</LinkTo>
-								<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="components-form-elements-structure--default">
-									<div class="act-card__container">
-										<div class="act-card__content">
-											<div class="act-card__icon">
-												<i class="fa-solid fa-keyboard"></i>
-											</div>
-											<div class="act-card__title">Form Elements</div>
-											<div class="act-card__description">Related input controls that allows users to provide data or configure options</div>
-											<div class="act-card__cta">
-												<i class="fa-solid fa-arrow-right"></i>
-											</div>
-										</div>
-									</div>
-								</LinkTo>
-								<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="components-form-elements-structure--default">
-									<div class="act-card__container">
-										<div class="act-card__content">
-											<div class="act-card__icon">
-												<i class="fa-solid fa-spinner"></i>
-											</div>
-											<div class="act-card__title">Loaders</div>
-											<div class="act-card__description">Used when retrieving data or performing slow computations</div>
-											<div class="act-card__cta">
-												<i class="fa-solid fa-arrow-right"></i>
-											</div>
-										</div>
-									</div>
-								</LinkTo>
-								<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="components-logos-act-government--horizontal">
-									<div class="act-card__container">
-										<div class="act-card__content">
-											<div class="act-card__icon">
-												<i class="fa-solid fa-masks-theater"></i>
-											</div>
-											<div class="act-card__title">Logos</div>
-											<div class="act-card__description">Visual representations of ACT Government</div>
-											<div class="act-card__cta">
-												<i class="fa-solid fa-arrow-right"></i>
-											</div>
-										</div>
-									</div>
-								</LinkTo>
-								<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="components-logos-act-government--horizontal">
-									<div class="act-card__container">
-										<div class="act-card__content">
-											<div class="act-card__icon">
-												<i class="fa-solid fa-window-restore"></i>
-											</div>
-											<div class="act-card__title">Popups</div>
-											<div class="act-card__description">A layer that appears above all other content on the page</div>
-											<div class="act-card__cta">
-												<i class="fa-solid fa-arrow-right"></i>
-											</div>
-										</div>
-									</div>
-								</LinkTo>
-								<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="components-logos-act-government--horizontal">
-									<div class="act-card__container">
-										<div class="act-card__content">
-											<div class="act-card__icon">
-												<i class="fa-solid fa-table"></i>
-											</div>
-											<div class="act-card__title">Tables</div>
-											<div class="act-card__description">Structure data in rows and columns, so users can scan, sort and compare information</div>
-											<div class="act-card__cta">
-												<i class="fa-solid fa-arrow-right"></i>
-											</div>
-										</div>
-									</div>
-								</LinkTo>
-								<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="components-logos-act-government--horizontal">
-									<div class="act-card__container">
-										<div class="act-card__content">
-											<div class="act-card__icon">
-												<i class="fa-solid fa-window-maximize"></i>
-											</div>
-											<div class="act-card__title">Tabs</div>
-											<div class="act-card__description">Allow the user to navigate between groups of information that appear within the same context</div>
-											<div class="act-card__cta">
-												<i class="fa-solid fa-arrow-right"></i>
-											</div>
-										</div>
-									</div>
-								</LinkTo>
-								<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="components-logos-act-government--horizontal">
-									<div class="act-card__container">
-										<div class="act-card__content">
-											<div class="act-card__icon">
-												<i class="fa-solid fa-tag"></i>
-											</div>
-											<div class="act-card__title">Tags</div>
-											<div class="act-card__description">Label, categorize, or organize items using keywords</div>
-											<div class="act-card__cta">
-												<i class="fa-solid fa-arrow-right"></i>
-											</div>
-										</div>
-									</div>
-								</LinkTo>
-								<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="components-logos-act-government--horizontal">
-									<div class="act-card__container">
-										<div class="act-card__content">
-											<div class="act-card__icon">
-												<i class="fa-solid fa-circle-info"></i>
-											</div>
-											<div class="act-card__title">Tooltips</div>
-											<div class="act-card__description">Display additional information upon hover or focus</div>
-											<div class="act-card__cta">
-												<i class="fa-solid fa-arrow-right"></i>
-											</div>
-										</div>
-									</div>
-								</LinkTo>
-								<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="components-logos-act-government--horizontal">
-									<div class="act-card__container">
-										<div class="act-card__content">
-											<div class="act-card__icon">
-												<i class="fa-solid fa-diamond-turn-right"></i>
-											</div>
-											<div class="act-card__title">Wayfinding</div>
-											<div class="act-card__description">Orientates a user and helps them move through the site</div>
-											<div class="act-card__cta">
-												<i class="fa-solid fa-arrow-right"></i>
-											</div>
-										</div>
-									</div>
-								</LinkTo>
+	<main className="act-body">
+		<div className="act-flex act-flex-light-purple">
+			<div className="act-flex__container act-flex__container-padding-trim">
+				<div className="act-flex__grid">
+					<div className="act-flex__row">
+						<div className="act-col__cw-12">
+							<div className="act-box">
+								<div className="act-breadcrumbs">
+									<ul className="act-breadcrumbs__container">
+										<li className="act-breadcrumbs__crumb act-h6">
+											<LinkTo className="act-breadcrumbs__crumb__link" kind="system-introduction--page">
+												Design System <i className="fa-solid fa-angle-right"></i>
+											</LinkTo>
+										</li>
+										<li className="act-breadcrumbs__crumb act-h6">
+											<LinkTo className="act-breadcrumbs__crumb__link" kind="components-overview--page">
+												Components <i className="fa-solid fa-angle-right"></i>
+											</LinkTo>
+										</li>
+									</ul>
+								</div>
+								<h1>Components</h1>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>
+		<div className="act-flex">
+			<div className="act-flex__container">
+				<div className="act-flex__grid">
+					<div className="act-flex__row">
+						<div className="act-col__cw-12">
+							<div className="act-box">
+								<div className="act-card-grid">
+									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="components-accordion-details--page">
+										<div class="act-card__container">
+											<div class="act-card__content">
+												<div class="act-card__icon">
+													<i class="fa-solid fa-rectangle-list"></i>
+												</div>
+												<div class="act-card__title">Accordion</div>
+												<div class="act-card__description">A vertically stacked list of headers with hidden content</div>
+												<div class="act-card__cta">
+													<i class="fa-solid fa-arrow-right"></i>
+												</div>
+											</div>
+										</div>
+									</LinkTo>
+									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="components-alerts-global-alert--default">
+										<div class="act-card__container">
+											<div class="act-card__content">
+												<div class="act-card__icon">
+													<i class="fa-solid fa-triangle-exclamation"></i>
+												</div>
+												<div class="act-card__title">Alerts</div>
+												<div class="act-card__description">Display critical or important information to the user</div>
+												<div class="act-card__cta">
+													<i class="fa-solid fa-arrow-right"></i>
+												</div>
+											</div>
+										</div>
+									</LinkTo>
+									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="components-alerts-global-alert--default">
+										<div class="act-card__container">
+											<div class="act-card__content">
+												<div class="act-card__icon">
+													<i class="fa-solid fa-circle-dot"></i>
+												</div>
+												<div class="act-card__title">Buttons</div>
+												<div class="act-card__description">Clickable elements that are used to trigger actions</div>
+												<div class="act-card__cta">
+													<i class="fa-solid fa-arrow-right"></i>
+												</div>
+											</div>
+										</div>
+									</LinkTo>
+									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="components-alerts-global-alert--default">
+										<div class="act-card__container">
+											<div class="act-card__content">
+												<div class="act-card__icon">
+													<i class="fa-solid fa-object-group"></i>
+												</div>
+												<div class="act-card__title">Cards</div>
+												<div class="act-card__description">Present a high-level summary of content related to a single topic for users to navigate to</div>
+												<div class="act-card__cta">
+													<i class="fa-solid fa-arrow-right"></i>
+												</div>
+											</div>
+										</div>
+									</LinkTo>
+									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="components-alerts-global-alert--default">
+										<div class="act-card__container">
+											<div class="act-card__content">
+												<div class="act-card__icon">
+													<i class="fa-solid fa-shoe-prints"></i>
+												</div>
+												<div class="act-card__title">Footers</div>
+												<div class="act-card__description">Displays across the bottom of all ACT Government websites</div>
+												<div class="act-card__cta">
+													<i class="fa-solid fa-arrow-right"></i>
+												</div>
+											</div>
+										</div>
+									</LinkTo>
+									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="components-form-elements-structure--default">
+										<div class="act-card__container">
+											<div class="act-card__content">
+												<div class="act-card__icon">
+													<i class="fa-solid fa-keyboard"></i>
+												</div>
+												<div class="act-card__title">Form Elements</div>
+												<div class="act-card__description">Related input controls that allows users to provide data or configure options</div>
+												<div class="act-card__cta">
+													<i class="fa-solid fa-arrow-right"></i>
+												</div>
+											</div>
+										</div>
+									</LinkTo>
+									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="components-form-elements-structure--default">
+										<div class="act-card__container">
+											<div class="act-card__content">
+												<div class="act-card__icon">
+													<i class="fa-solid fa-spinner"></i>
+												</div>
+												<div class="act-card__title">Loaders</div>
+												<div class="act-card__description">Used when retrieving data or performing slow computations</div>
+												<div class="act-card__cta">
+													<i class="fa-solid fa-arrow-right"></i>
+												</div>
+											</div>
+										</div>
+									</LinkTo>
+									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="components-logos-act-government--horizontal">
+										<div class="act-card__container">
+											<div class="act-card__content">
+												<div class="act-card__icon">
+													<i class="fa-solid fa-masks-theater"></i>
+												</div>
+												<div class="act-card__title">Logos</div>
+												<div class="act-card__description">Visual representations of ACT Government</div>
+												<div class="act-card__cta">
+													<i class="fa-solid fa-arrow-right"></i>
+												</div>
+											</div>
+										</div>
+									</LinkTo>
+									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="components-logos-act-government--horizontal">
+										<div class="act-card__container">
+											<div class="act-card__content">
+												<div class="act-card__icon">
+													<i class="fa-solid fa-window-restore"></i>
+												</div>
+												<div class="act-card__title">Popups</div>
+												<div class="act-card__description">A layer that appears above all other content on the page</div>
+												<div class="act-card__cta">
+													<i class="fa-solid fa-arrow-right"></i>
+												</div>
+											</div>
+										</div>
+									</LinkTo>
+									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="components-logos-act-government--horizontal">
+										<div class="act-card__container">
+											<div class="act-card__content">
+												<div class="act-card__icon">
+													<i class="fa-solid fa-table"></i>
+												</div>
+												<div class="act-card__title">Tables</div>
+												<div class="act-card__description">Structure data in rows and columns, so users can scan, sort and compare information</div>
+												<div class="act-card__cta">
+													<i class="fa-solid fa-arrow-right"></i>
+												</div>
+											</div>
+										</div>
+									</LinkTo>
+									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="components-logos-act-government--horizontal">
+										<div class="act-card__container">
+											<div class="act-card__content">
+												<div class="act-card__icon">
+													<i class="fa-solid fa-window-maximize"></i>
+												</div>
+												<div class="act-card__title">Tabs</div>
+												<div class="act-card__description">Allow the user to navigate between groups of information that appear within the same context</div>
+												<div class="act-card__cta">
+													<i class="fa-solid fa-arrow-right"></i>
+												</div>
+											</div>
+										</div>
+									</LinkTo>
+									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="components-logos-act-government--horizontal">
+										<div class="act-card__container">
+											<div class="act-card__content">
+												<div class="act-card__icon">
+													<i class="fa-solid fa-tag"></i>
+												</div>
+												<div class="act-card__title">Tags</div>
+												<div class="act-card__description">Label, categorize, or organize items using keywords</div>
+												<div class="act-card__cta">
+													<i class="fa-solid fa-arrow-right"></i>
+												</div>
+											</div>
+										</div>
+									</LinkTo>
+									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="components-logos-act-government--horizontal">
+										<div class="act-card__container">
+											<div class="act-card__content">
+												<div class="act-card__icon">
+													<i class="fa-solid fa-circle-info"></i>
+												</div>
+												<div class="act-card__title">Tooltips</div>
+												<div class="act-card__description">Display additional information upon hover or focus</div>
+												<div class="act-card__cta">
+													<i class="fa-solid fa-arrow-right"></i>
+												</div>
+											</div>
+										</div>
+									</LinkTo>
+									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="components-logos-act-government--horizontal">
+										<div class="act-card__container">
+											<div class="act-card__content">
+												<div class="act-card__icon">
+													<i class="fa-solid fa-diamond-turn-right"></i>
+												</div>
+												<div class="act-card__title">Wayfinding</div>
+												<div class="act-card__description">Orientates a user and helps them move through the site</div>
+												<div class="act-card__cta">
+													<i class="fa-solid fa-arrow-right"></i>
+												</div>
+											</div>
+										</div>
+									</LinkTo>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</main>
 	<AoC />
 	<Footer />
 </div>
