--- a/src/6-previews/0-overview.stories.mdx
+++ b/src/6-previews/0-overview.stories.mdx
@@ -17,46 +17,48 @@ import LinkTo from "@storybook/addon-links/react";
 
 <div className="act-docs-container">
 	<Masthead />
-	<div className="act-flex act-flex-light-purple">
-		<div className="act-flex__container act-flex__container-padding-trim">
-			<div className="act-flex__grid">
-				<div className="act-flex__row">
-					<div className="act-col__cw-12">
-						<div className="act-box">
-							<div className="act-breadcrumbs">
-								<ul className="act-breadcrumbs__container">
-									<li className="act-breadcrumbs__crumb act-h6">
-										<LinkTo className="act-breadcrumbs__crumb__link" kind="system-introduction--page">
-											Design System <i className="fa-solid fa-angle-right"></i>
-										</LinkTo>
-									</li>
-									<li className="act-breadcrumbs__crumb act-h6">
-										<LinkTo className="act-breadcrumbs__crumb__link" kind="previews-overview--page">
-											Previews <i className="fa-solid fa-angle-right"></i>
-										</LinkTo>
-									</li>
-								</ul>
+	<main className="act-body">
+		<div className="act-flex act-flex-light-purple">
+			<div className="act-flex__container act-flex__container-padding-trim">
+				<div className="act-flex__grid">
+					<div className="act-flex__row">
+						<div className="act-col__cw-12">
+							<div className="act-box">
+								<div className="act-breadcrumbs">
+									<ul className="act-breadcrumbs__container">
+										<li className="act-breadcrumbs__crumb act-h6">
+											<LinkTo className="act-breadcrumbs__crumb__link" kind="system-introduction--page">
+												Design System <i className="fa-solid fa-angle-right"></i>
+											</LinkTo>
+										</li>
+										<li className="act-breadcrumbs__crumb act-h6">
+											<LinkTo className="act-breadcrumbs__crumb__link" kind="previews-overview--page">
+												Previews <i className="fa-solid fa-angle-right"></i>
+											</LinkTo>
+										</li>
+									</ul>
+								</div>
+								<h1>Previews</h1>
 							</div>
-							<h1>Previews</h1>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>
-	<div className="act-flex">
-		<div className="act-flex__container">
-			<div className="act-flex__grid">
-				<div className="act-flex__row">
-					<div className="act-col__cw-12">
-						<div className="act-box">
-							<h2>Introduction</h2>
+		<div className="act-flex">
+			<div className="act-flex__container">
+				<div className="act-flex__grid">
+					<div className="act-flex__row">
+						<div className="act-col__cw-12">
+							<div className="act-box">
+								<h2>Introduction</h2>
+							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>
+	</main>
 	<AoC />
 	<Footer />
 </div>
